# shader_practice

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  myShader.frag  myShader.geom  myShader.vert  qtosgwidget.cpp  qtosgwidget.h  shader_dialog.cpp  shader_dialog.h  shader_dialog.ui  shader_practice.pro  vehicle1.mtl  vehicle1.stl
